# gst-dynamic-pipeline

./: CMakeLists.txt  README.md  dynamic_pipeline_crop.cpp  main.cpp
